--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bump": "^0.3.0",
-    "load-grunt-tasks": "^3.1.0"
+    "load-grunt-tasks": "^3.1.0",
+    "lodash": "^3.3.1"
   }
 }
